Add centralized stick demand resolver for distribution